deploy/k8s/base/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 202077713283.dkr.ecr.us-east-1.amazonaws.com/food-auth-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /auth/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: food-delivery
spec:
  selector:
    app: auth-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
