deploy/k8s/base/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          image: 202077713283.dkr.ecr.us-east-1.amazonaws.com/food-delivery-service:latest
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /deliveries/health
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /deliveries/health
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: food-delivery
spec:
  selector:
    app: delivery-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
