deploy/k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
        - name: frontend-web
          image: 202077713283.dkr.ecr.us-east-1.amazonaws.com/food-frontend-web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: food-delivery
spec:
  selector:
    app: frontend-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
