deploy/k8s/base/menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
    spec:
      containers:
        - name: menu-service
          image: 202077713283.dkr.ecr.us-east-1.amazonaws.com/food-menu-service:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /menu/health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /menu/health
              port: 8081
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  namespace: food-delivery
spec:
  selector:
    app: menu-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
