deploy/k8s/base/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: food-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: 202077713283.dkr.ecr.us-east-1.amazonaws.com/food-order-service:latest
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /orders/health
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /orders/health
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: food-delivery
spec:
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
